cmake_minimum_required(VERSION 3.24)
project(c_plus_plus)

set(CMAKE_CXX_STANDARD 17)

add_executable(c_plus_plus_1 1/exercise1.cpp)
add_executable(c_plus_plus_2 2/exercise2.cpp)
add_executable(c_plus_plus_3 3/exercise3.cpp)
add_executable(c_plus_plus_4 4/exercise4.cpp)
add_executable(c_plus_plus_5 5/exercise5.cpp)
add_executable(c_plus_plus_6 6/exercise6.cpp)
add_executable(c_plus_plus_7 7/exercise7.cpp)
add_executable(c_plus_plus_8 8/exercise8.cpp)
add_executable(c_plus_plus_9 9/exercise9.cpp)
add_executable(c_plus_plus_10 10/exercise10.cpp)
add_executable(c_plus_plus_11 11/exercise11.cpp)
add_executable(c_plus_plus_12 12/exercise12.cpp)
add_executable(c_plus_plus_13 13/exercise13.cpp)
add_executable(c_plus_plus_14 14/exercise14.cpp)
add_executable(c_plus_plus_15 15/exercise15.cpp)
add_executable(c_plus_plus_16 16/exercise16.cpp)
add_executable(c_plus_plus_17 17/exercise17.cpp)
add_executable(c_plus_plus_18 18/exercise18.cpp)
add_executable(c_plus_plus_19 19/exercise19.cpp)
add_executable(c_plus_plus_20 20/exercise20.cpp)